--- a/dz3.html
+++ b/dz3.html
@@ -1,57 +1,61 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
  <head>
     <meta charset="UTF-8">
-    <title>ДЗ №2</title>
+    <title>ДЗ №3</title>
     <link rel="stylesheet" href="main.css">
  </head>
 <body>
   <div class="wrapper">
 <!--Это шапка сайта-->
     <div class="header">
-      <h1>Fitness</h1>
+      <img src="https://cloud.githubusercontent.com/assets/17214889/13352530/804e6788-dc96-11e5-8e5c-dcc27c865059.jpg" alt="логотип" />
     </div>
 <!--МЕНЮ-->
+
     <div class="menu">
-      <span class="firstbotton"><a class="top" href="#">Главная</a></span>
-      <span class="botton"><a class="top" href="#">Товары</a></span>
-      <span class="botton"><a class="top" href="#">О нас</a></span>
-      <span class="botton"><a class="top" href="#">Контакты</a></span>
+      <ul class="up">
+        <li class="up"><a class="up" href="#">Главная</a></li>
+        <li class="up"><a class="up" href="#">Товары</a></li>
+        <li class="up"><a class="up" href="#">О нас</a></li>
+        <li class="up"><a class="up" href="#">Контакты</a></li>
+      </ul>
     </div>
+
 <!--Сайдбар-->
     <div class="sidebar">
-      <ul>
-        <li><span class="category"><a class="ulli" href="#">Ноутбуки</a></span></li>
-        <li><span class="category"><a class="ulli" href="#">Планшеты</a></span></li>
-        <li><span class="category"><a class="ulli" href="#">Телефоны</a></span></li>
-        <li><span class="category"><a class="ulli" href="#">Телевизоры</a></span></li>
-        <li><span class="category"><a class="ulli" href="#">Бытовая техника</a></span></li>
-        <li><span class="category"><a class="ulli" href="#">Автотовары</a></span></li>
+      <ul class="sidebar">
+        <li class="sidebar"><a class="sidebar" href="#">Ноутбуки</a></li>
+        <li class="sidebar"><a class="sidebar" href="#">Планшеты</a></li>
+        <li class="sidebar"><a class="sidebar" href="#">Телефоны</a></li>
+        <li class="sidebar"><a class="sidebar" href="#">Телевизоры</a></li>
+        <li class="sidebar"><a class="sidebar" href="#">Бытовая техника</a></li>
+        <li class="sidebar"><a class="sidebar" href="#">Автотовары</a></li>
       </ul>
     </div>
 <!--Описание товара-->
     <div class="content">
-      <p class="main">
-        <img src="https://cloud.githubusercontent.com/assets/17214889/13214059/ec436d7e-d955-11e5-83d3-fe29944aa5da.jpg" alt="картинка" title="велосипед">
-      </p>
-      <p class="text">
-        Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є,<br>
-        фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку<br>
-        та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й<br>
-        прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризува<br>
-        лась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили<br>
-        уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на<br>
+         <img class="velo" src="https://cloud.githubusercontent.com/assets/17214889/13214059/ec436d7e-d955-11e5-83d3-fe29944aa5da.jpg" width="500px" alt="картинка" title="велосипед">
+         <p class="text">
+        Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є,
+        фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку
+        та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й
+        прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризува
+        лась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили
+        уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на
          кшталт Aldus Pagemaker, які використовували різні версії
         Lorem Ipsum.
-      </p>
+        </p>
     </div>
 <!--Футер-->
     <div class="footer">
-        <span class="firstbottonn"><a class="down" href="#">Главная</a></span>
-        <span class="bottonn"><a class="down" href="#">Товары</a></span>
-        <span class="bottonn"><a class="down" href="#">О нас</a></span>
-        <span class="bottonn"><a class="down" href="#">Контакты</a></span>
-        <span class="info">2014 &copy; All right reserved</span>
+      <ul class="foo">
+        <li class="foo"><a class="foo" href="#">Главная</a></li>
+        <li class="foo"><a class="foo" href="#">Товары</a></li>
+        <li class="foo"><a class="foo" href="#">О нас</a></li>
+        <li class="foo"><a class="foo" href="#">Контакты</a></li>
+        <li class="copyright">2014 &copy; All right reserved</li>
+      </ul>
     </div>
  </div>
 </body>
